tests/should-fail/active-fragments/check1.fk
-- #desc   Due to not only considering active fragments on APP, shadowed instantiations are regarded
-- #return cannot unify abilities [£ | State ( Bool ) , State Int] (line 10 , column 8) and [£ | State Int] (line 18 , column 8)

--- start of standard stuff ---
interface State X = get: X
                  | put: X -> Unit
--- end of standard stuff ---


foo: {[State Bool, State Int]Unit}
foo! = put 7

processStateInt: {<State Int>Unit -> Unit}
processStateInt <get -> k> = processStateInt (k 3)
processStateInt <put x -> k> = processStateInt (k unit)
processStateInt unit = unit

main: {Unit}
main! = processStateInt foo!
